--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
+    "node-fetch": "^2.6.1",
     "puppeteer": "^5.5.0"
   },
   "devDependencies": {},
