--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "puppeteer": "^5.5.0"
   },
   "devDependencies": {
-    "eslint": "^7.18.0"
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
