--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "convict": "^6.0.0",
