--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "@aws-sdk/client-rekognition": "^3.24.0",
+    "@aws-sdk/client-s3": "^3.24.0",
     "@sendgrid/mail": "^7.4.2",
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
