--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
-    "puppeteer": "^5.5.0"
+    "puppeteer": "^5.5.0",
+    "stem-porter": "0.0.1"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
